@@ -1,7 +1,7 @@
 #----------------------------------------------------------------------------
 #       Make Workspace
 #
-# $Id: MakeWorkspaceCreator.pm 1069 2006-10-16 13:36:23Z elliott_c $
+# $Id$
 #
 # This file was generated by MPC.  Any changes made directly to
 # this file will be lost the next time it is generated.
@@ -12,20 +12,26 @@
 #----------------------------------------------------------------------------
 
 
-all: base-target basic-target
+all: base-target csharp-target basic-target
 
 clean depend generated realclean $(CUSTOM_TARGETS):
 	@cd base && $(MAKE) -f Makefile.base $(@)
+	@cd csharp && $(MAKE) -f Makefile.csharp $(@)
 	@cd basic && $(MAKE) -f Makefile.basic $(@)
 
 .PHONY: base-target
 base-target:
 	@cd base && $(MAKE) -f Makefile.base generated all
 
+.PHONY: csharp-target
+csharp-target:
+	@cd csharp && $(MAKE) -f Makefile.csharp generated all
+
 .PHONY: basic-target
-basic-target: base-target
+basic-target: base-target csharp-target
 	@cd basic && $(MAKE) -f Makefile.basic generated all
 
 project_name_list:
 	@echo base-target
 	@echo basic-target
+	@echo csharp-target
